--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
 <body>
     <header>
      <nav>
-        <a href="/">WebStudio</a>
+        <a href="/"><span style="color:blue">Web</span>Studio</a>
      <ul>
          <li><a href="">Студия</a></li>
          <li><a href="">Портфолио</a></li>
@@ -24,6 +24,7 @@
     <main>
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
             <ul>
                 <li><h2>Внимание к деталям</h2></li>
                 <li><p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
@@ -36,12 +37,29 @@
             </ul>
         </section>
         <section>
-            
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="/images/img.jpg" alt="pc_hands_to_the_left_side_typing" width="370"> </li>
+                <li><img src="/images/img(1).jpg" alt="display_phone_in_the_hand" width="370"></li>
+                <li><img src="/images/img(2).jpg" alt="tablet_hexagon" width="370"></li>
+            </ul>
         </section>
-
-    </main>
+           <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li><figure><img src="/images/img(3).jpg" alt="Igor_Demyanenko" width="270"><figcaption><b>Игорь Демьяненко</b><br>Product Designer</figcaption></figure></li>
+                <li><figure><img src="/images/img(4).jpg" alt="Blonde girl Olga Repina" width="270"><figcaption><b>Ольга Репина</b><br>Frontend Developer</figcaption></figure></li>
+                <li><figure><img src="/images/img(5).jpg" alt="Smiling Nikolai Tarasov" width="270"><figcaption><b>Николай Тарасов</b><br>Marketing</figcaption></figure></li>
+                <li><figure><img src="/images/img(6).jpg" alt="Mikhail Ermakov in a black shirt" width="270"><figcaption><b>Михаил Ермаков</b><br>UI Designer</figcaption></figure></li>
+            </ul>
+        </section>
+  </main>
     <footer>
-
+        <a href="/"><span style="color:blue">Web</span>Studio</a>
+        <address>г. Киев, пр-т Леси Украинки, 26</address>
+        <a href="mailto:info@example.com">info@example.com</a>
+        <br>
+        <a href="tel:+380991111111">+38 099 111 11 11</a>
     </footer>
 </body>
 </html>
