--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
      <nav>
-        <a href="/"><span style="color:blue">Web</span>Studio</a>
+        <a href="./index.html"><span style="color:blue">Web</span>Studio</a>
      <ul>
          <li><a href="">Студия</a></li>
          <li><a href="">Портфолио</a></li>
@@ -55,7 +55,7 @@
         </section>
   </main>
     <footer>
-        <a href="/"><span style="color:blue">Web</span>Studio</a>
+        <a href="./index.html"><span style="color:blue">Web</span>Studio</a>
         <address>г. Киев, пр-т Леси Украинки, 26</address>
         <a href="mailto:info@example.com">info@example.com</a>
         <br>
