--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 <body>
+    <!-- header -->
     <header>
      <nav>
         <a href="./index.html"><span style="color:blue">Web</span>Studio</a>
@@ -22,6 +23,7 @@
      </ul>
     </header>
     <main>
+        <!-- hero + advantages -->
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
@@ -36,6 +38,7 @@
                 <li>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</li>
             </ul>
         </section>
+        <!-- our services -->
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
@@ -44,22 +47,23 @@
                 <li><img src="/images/img(2).jpg" alt="tablet_hexagon" width="370"></li>
             </ul>
         </section>
+        <!-- our team -->
            <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><figure><img src="/images/img(3).jpg" alt="Igor_Demyanenko" width="270"><figcaption><b>Игорь Демьяненко</b><br>Product Designer</figcaption></figure></li>
-                <li><figure><img src="/images/img(4).jpg" alt="Blonde girl Olga Repina" width="270"><figcaption><b>Ольга Репина</b><br>Frontend Developer</figcaption></figure></li>
-                <li><figure><img src="/images/img(5).jpg" alt="Smiling Nikolai Tarasov" width="270"><figcaption><b>Николай Тарасов</b><br>Marketing</figcaption></figure></li>
-                <li><figure><img src="/images/img(6).jpg" alt="Mikhail Ermakov in a black shirt" width="270"><figcaption><b>Михаил Ермаков</b><br>UI Designer</figcaption></figure></li>
+                <li><img src="/images/img(3).jpg" alt="Igor_Demyanenko" width="270"><h2><b>Игорь Демьяненко</b></h2><p>Product Designer</p></li>
+                <li><img src="/images/img(4).jpg" alt="Blonde girl Olga Repina" width="270"><h2><b>Ольга Репина</b></h2><p>Frontend Developer</p></li>
+                <li><img src="/images/img(5).jpg" alt="Smiling Nikolai Tarasov" width="270"><h2>b>Николай Тарасов</b></h2><p>Marketing</p></li>
+                <li><img src="/images/img(6).jpg" alt="Mikhail Ermakov in a black shirt" width="270"><h2><b>Михаил Ермаков</b></h2><p>UI Designer</p></li>
             </ul>
         </section>
   </main>
     <footer>
+        <!-- is it necessary to use 2 separate <address> tags? -->
+        <div>
         <a href="./index.html"><span style="color:blue">Web</span>Studio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <br>
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <address>г. Киев, пр-т Леси Украинки, 26 <br>info@example.com<br>+38 099 111 11 11</address>   
+        </div>
     </footer>
 </body>
 </html>
