--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      </ul>
     </header>
     <main>
-        <!-- hero + advantages -->
+        <!-- hero + advantages together -->
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
@@ -60,6 +60,7 @@
   </main>
     <footer>
         <!-- is it necessary to use 2 separate <address> tags? -->
+            <!-- added div for css -->
         <div>
         <a href="./index.html"><span style="color:blue">Web</span>Studio</a>
         <address>г. Киев, пр-т Леси Украинки, 26 <br>info@example.com<br>+38 099 111 11 11</address>   
