--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="/images/img.jpg" alt="pc_hands_to_the_left_side_typing" width="370"> </li>
-                <li><img src="/images/img(1).jpg" alt="display_phone_in_the_hand" width="370"></li>
-                <li><img src="/images/img(2).jpg" alt="tablet_hexagon" width="370"></li>
+                <li><img src="./images/img.jpg" alt="pc_hands_to_the_left_side_typing" width="370"> </li>
+                <li><img src="./images/img(1).jpg" alt="display_phone_in_the_hand" width="370"></li>
+                <li><img src="./images/img(2).jpg" alt="tablet_hexagon" width="370"></li>
             </ul>
         </section>
         <!-- our team -->
            <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><img src="/images/img(3).jpg" alt="Igor_Demyanenko" width="270"><h2><b>Игорь Демьяненко</b></h2><p>Product Designer</p></li>
-                <li><img src="/images/img(4).jpg" alt="Blonde girl Olga Repina" width="270"><h2><b>Ольга Репина</b></h2><p>Frontend Developer</p></li>
-                <li><img src="/images/img(5).jpg" alt="Smiling Nikolai Tarasov" width="270"><h2><b>Николай Тарасов</b></h2><p>Marketing</p></li>
-                <li><img src="/images/img(6).jpg" alt="Mikhail Ermakov in a black shirt" width="270"><h2><b>Михаил Ермаков</b></h2><p>UI Designer</p></li>
+                <li><img src="/.images/img(3).jpg" alt="Igor_Demyanenko" width="270"><h2><b>Игорь Демьяненко</b></h2><p>Product Designer</p></li>
+                <li><img src="/.images/img(4).jpg" alt="Blonde girl Olga Repina" width="270"><h2><b>Ольга Репина</b></h2><p>Frontend Developer</p></li>
+                <li><img src="/.images/img(5).jpg" alt="Smiling Nikolai Tarasov" width="270"><h2><b>Николай Тарасов</b></h2><p>Marketing</p></li>
+                <li><img src="/.images/img(6).jpg" alt="Mikhail Ermakov in a black shirt" width="270"><h2><b>Михаил Ермаков</b></h2><p>UI Designer</p></li>
             </ul>
         </section>
   </main>
