--- a/index.html
+++ b/index.html
@@ -23,21 +23,27 @@
      </ul>
     </header>
     <main>
-        <!-- hero + advantages together -->
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
-            <ul>
-                <li><h2>Внимание к деталям</h2></li>
-                <li><p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
-                <li><h2>Пунктуальность</h2></li>
-                <li>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</li>
-                <li><h2>Планирование</h2></li>
-                <li>Равным образом консультация с широким активом в значительной степени обуславливает.</li>
-                <li><h2>Современные технологии</h2></li>
-                <li>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</li>
-            </ul>
         </section>
+        <section>
+            <!-- header will be hidden -->
+            <h2>наши преимущества</h2>
+            <ul>
+                <li><h3>Внимание к деталям</h3><p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li><h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li><h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li><h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+            </section>
         <!-- our services -->
         <section>
             <h2>Чем мы занимаемся</h2>
@@ -63,7 +69,10 @@
             <!-- added div for css -->
         <div>
         <a href="./index.html"><span style="color:blue">Web</span>Studio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26 <br>info@example.com<br>+38 099 111 11 11</address>   
+        <address>г. Киев, пр-т Леси Украинки, 26
+             <a href="mailto:info@example.com">info@example.com</a> 
+            <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>   
+            </address>   
         </div>
     </footer>
 </body>
