--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
            <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><img src="./images/img(3).jpg" alt="Igor_Demyanenko" width="270"><h2><b>Игорь Демьяненко</b></h2><p>Product Designer</p></li>
-                <li><img src="./images/img(4).jpg" alt="Blonde girl Olga Repina" width="270"><h2><b>Ольга Репина</b></h2><p>Frontend Developer</p></li>
-                <li><img src="./images/img(5).jpg" alt="Smiling Nikolai Tarasov" width="270"><h2><b>Николай Тарасов</b></h2><p>Marketing</p></li>
-                <li><img src="./images/img(6).jpg" alt="Mikhail Ermakov in a black shirt" width="270"><h2><b>Михаил Ермаков</b></h2><p>UI Designer</p></li>
+                <li><img src="./images/img(3).jpg" alt="Igor_Demyanenko" width="270"><h3>Игорь Демьяненко</h3><p>Product Designer</p></li>
+                <li><img src="./images/img(4).jpg" alt="Blonde girl Olga Repina" width="270"><h3>Ольга Репина</h3><p>Frontend Developer</p></li>
+                <li><img src="./images/img(5).jpg" alt="Smiling Nikolai Tarasov" width="270"><h3>Николай Тарасов</h3><p>Marketing</p></li>
+                <li><img src="./images/img(6).jpg" alt="Mikhail Ermakov in a black shirt" width="270"><h3>Михаил Ермаков</h3><p>UI Designer</p></li>
             </ul>
         </section>
   </main>
