--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <a href="./index.html"><span style="color:blue">Web</span>Studio</a>
         <address>г. Киев, пр-т Леси Украинки, 26
              <a href="mailto:info@example.com">info@example.com</a> 
-            <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>   
+            <a href="tel:+380991111111">+38 099 111 11 11</a>   
             </address>   
         </div>
     </footer>
